# bluepills

BlinkLed/: CMakeLists.txt  flash.sh  ocd_readme.txt
PwmTest/: main.c  main.c.backup
STM32CubeF1/: CMakeLists.txt  build.sh  flash.sh
UartPrint/: CMakeLists.txt  flash.sh  main.c
